# purplerepo

./: .gitignore  .pre-commit-config.yaml  README.md  detect_repo_changes.py  main.py  pyproject.toml  repo-list.yaml  test_detect_changes.py
.github/workflows/: detect-repo-changes.yml  validate-pr.yml
.github/workflows/scripts/: detect_repo_changes.py  requirements.txt  test_detect_changes.py
workers/python-github-enrich/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  wrangler.toml
workers/python-github-enrich/src/: entry.py
workers/r2-ai-workflow/: .gitignore  README.md  package-lock.json  package.json  wrangler.toml
workers/r2-ai-workflow/src/: index.ts
workers/r2-ai-workflow/src/routes/: ai.ts  github.ts  r2.ts  workflow-trigger.ts
workers/r2-ai-workflow/src/schemas/: ai.ts  common.ts  github.ts  r2.ts  workflow-params.ts  workflow.ts
workers/r2-ai-workflow/src/services/: ai.ts  github-queue.ts  github-readme.ts  logger.ts  r2.ts
workers/r2-ai-workflow/src/workflows/: GitHubQueueFetchreadmeUploadSummarizeWorkflow.ts  UploadAndSummarizeWorkflow.ts
